--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 
 .section {
     border-bottom-left-radius: 5em;
+    border-top-right-radius: 1em;
     text-align: center;
     background-color: yellow;
     padding: 2rem;
